--- a/templates/register.html
+++ b/templates/register.html
@@ -145,6 +145,7 @@
                     <select class="form-control" id="role" name="role" onchange="toggleGroupField()" required>
                         <option value="студент">Студент</option>
                         <option value="преподаватель">Преподаватель</option>
+                        <option value="преподаватель консультант">Преподаватель-консультант</option>
                     </select>
                 </div>
                 
