--- a/templates/teacher_dashboard.html
+++ b/templates/teacher_dashboard.html
@@ -24,7 +24,7 @@
                                     <h6 class="card-title">{{ group.name }}</h6>
                                     <p class="card-text">
                                         <small class="text-muted">
-                                            Направление: {{ group.direction_navigation.name }}
+                                            Направление: {{ group.direction.name if group.direction else 'Не указано' }}
                                         </small>
                                     </p>
                                 </div>
